openbao/istio-openbao-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: openbao-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
  - name: https
    hostname: "vault.lab.local"
    port: 443
    protocol: TLS
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            app-namespace: vault-system
    tls:
      mode: Passthrough
